[project]
name = "energy-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deltalake>=1.2.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.0",
]
